# mediatools

./: .gitmodules  CMakeLists.txt
common/: CMakeLists.txt  FramePipeline.h  JpegLs.cpp  JpegLs.h  VideoFrame.h  log.h
common/compression/: JpegLs.cpp  JpegLs.h
common/imgproc/: HistogramEqualizer.h
common/storage/: VideoSequenceReader.cpp  VideoSequenceReader.h  VideoSequenceWriter.cpp  VideoSequenceWriter.h
common/transport/: IVideoRx.h  IVideoTx.h  IpVideoClient.cpp  IpVideoClient.h  IpVideoServer.cpp  IpVideoServer.h
libdisplay/: CMakeLists.txt  IVideoDisplay.h  OpenGLVideoDisplay.cpp  main.cpp
libdisplay/opengl/: Mesh.h  Shader.h
recv_video/: CMakeLists.txt  main.cpp
stream_video/: CMakeLists.txt  Server.h  main.cpp  server.h
stream_video/VideoSource/: IVideoSource.cpp  IVideoSource.h  RecordingVideoSource.cpp  RecordingVideoSource.h  UVCVideoSource.cpp  UVCVideoSource.h
stream_video/video_source/: IVideoSource.cpp  IVideoSource.h  UVCVideoSource.cpp  UVCVideoSource.h
